--- a/portfolio.html
+++ b/portfolio.html
@@ -63,27 +63,42 @@
           <h1 class="hidden" hidden>Page two</h1>
           <ul class="list two-section-one-list button-two">
             <li>
-              <button class="link two-section-one-item-button" type="button">
+              <button
+                class="link type-all two-section-one-item-button"
+                type="button"
+              >
                 All
               </button>
             </li>
             <li>
-              <button class="link two-section-one-item-button" type="button">
+              <button
+                class="link type-website two-section-one-item-button"
+                type="button"
+              >
                 Web Site
               </button>
             </li>
             <li>
-              <button class="link two-section-one-item-button" type="button">
+              <button
+                class="link type-app two-section-one-item-button"
+                type="button"
+              >
                 App
               </button>
             </li>
             <li>
-              <button class="link two-section-one-item-button" type="button">
+              <button
+                class="link type-design two-section-one-item-button"
+                type="button"
+              >
                 Design
               </button>
             </li>
             <li>
-              <button class="link two-section-one-item-button" type="button">
+              <button
+                class="link type-marketing two-section-one-item-button"
+                type="button"
+              >
                 Marketing
               </button>
             </li>
