--- a/index.html
+++ b/index.html
@@ -29,27 +29,27 @@
             >Web<span class="logo-two link">Studio</span></a
           >
           <ul class="header-list list">
-            <li class="link header-item">
+            <li class="link header-item studio">
               <a class="link header-list-item" href="./index.html">Studio</a>
             </li>
-            <li class="link header-item">
+            <li class="link header-item portfolio">
               <a class="link header-list-item" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
-            <li class="link header-item">
+            <li class="link header-item contacts">
               <a class="link header-list-item" href="">Contacts</a>
             </li>
           </ul>
         </nav>
         <address class="address">
           <ul class="adres-list list header-list">
-            <li class="link header-item">
+            <li class="link header-item mail">
               <a class="link adres-list-item" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="link header-item">
+            <li class="link header-item tel">
               <a class="link adres-list-item" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
@@ -67,8 +67,8 @@
           <button class="button-order" type="button">Order Service</button>
         </div>
       </section>
-      <section class="section-two">
-        <div class="container sec-two">
+      <section class="section-two sec-two">
+        <div class="container">
           <h2 hidden class="hidden">Working Principles</h2>
           <ul class="list sec-two-list">
             <li class="section-two-item">
