--- a/portfolio.html
+++ b/portfolio.html
@@ -28,27 +28,27 @@
             >Web<span class="logo-two link">Studio</span></a
           >
           <ul class="header-list list">
-            <li class="link header-item">
+            <li class="link header-item studio">
               <a class="link header-list-item" href="./index.html">Studio</a>
             </li>
-            <li class="link header-item">
+            <li class="link header-item portfolio">
               <a class="link header-list-item" href="./portfolio.html"
                 >Portfolio</a
               >
             </li>
-            <li class="link header-item">
+            <li class="link header-item contacts">
               <a class="link header-list-item" href="">Contacts</a>
             </li>
           </ul>
         </nav>
         <address class="address">
           <ul class="adres-list list header-list">
-            <li class="link header-item">
+            <li class="link header-item mail">
               <a class="link adres-list-item" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="link header-item">
+            <li class="link header-item tel">
               <a class="link adres-list-item" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
@@ -58,7 +58,7 @@
       </div>
     </header>
     <main class="main">
-      <section>
+      <section class="but-two-sec">
         <div class="container">
           <h1 class="hidden" hidden>Page two</h1>
           <ul class="list two-section-one-list button-two">
